tests/baselines/reference/declFileTypeAnnotationTypeAlias(strict=true).errors.txt
declFileTypeAnnotationTypeAlias.ts(21,5): error TS7010: 'someMethod', which lacks return-type annotation, implicitly has an 'any' return type.


==== declFileTypeAnnotationTypeAlias.ts (1 errors) ====
    module M {
        export type Value = string | number | boolean;
        export var x: Value;
    
        export class c {
        }
    
        export type C = c;
    
        export module m {
            export class c {
            }
        }
    
        export type MC = m.c;
    
        export type fc = () => c;
    }
    
    interface Window {
        someMethod();
        ~~~~~~~~~~~~~
!!! error TS7010: 'someMethod', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    module M {
        export type W = Window | string;
        export module N {
            export class Window { }
            export var p: W;
        }
    }